[gd_scene load_steps=7 format=3 uid="uid://dghms8su3plri"]

[ext_resource type="Script" path="res://Scripts/Abilities/infinite_energy_ability.gd" id="1_bnyb3"]
[ext_resource type="Texture2D" uid="uid://c2eeg5k2qo3oj" path="res://Sprites/Abilities/InfiniteEnergyAbility.png" id="2_5c371"]
[ext_resource type="FontFile" uid="uid://b0ut30id2qj3r" path="res://Fonts/dogicapixel.ttf" id="3_tdo7c"]
[ext_resource type="Texture2D" uid="uid://4m7e4hljxhd3" path="res://Sprites/Player/EnergyIcon.png" id="4_eqeyp"]
[ext_resource type="AudioStream" uid="uid://b3a2pc7ya8hr5" path="res://Sounds/Infinite_Energy.mp3" id="5_x52xh"]

[sub_resource type="LabelSettings" id="LabelSettings_cjira"]
font = ExtResource("3_tdo7c")
font_size = 8
font_color = Color(0, 0, 0, 1)
outline_size = 4

[node name="Inifinite_Energy_Ability" type="Node2D"]
script = ExtResource("1_bnyb3")
starter_cooldown = 10
energy_use = 140

[node name="Ability_Frame" type="Sprite2D" parent="."]
texture = ExtResource("2_5c371")

[node name="Cooldown_Left" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.698039)
offset_left = -10.0
offset_top = -4.0
offset_right = 11.0
offset_bottom = 3.0
text = "100"
label_settings = SubResource("LabelSettings_cjira")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Energy_Use" type="Sprite2D" parent="."]
visible = false
position = Vector2(6, 8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_eqeyp")

[node name="Use" type="Label" parent="Energy_Use"]
modulate = Color(1, 1, 1, 0.698039)
offset_left = -26.0
offset_top = -4.0
offset_right = -5.0
offset_bottom = 6.0
text = "140"
label_settings = SubResource("LabelSettings_cjira")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Duration_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Particles_Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Use_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x52xh")
volume_db = 4.0
pitch_scale = 0.75
bus = &"Sounds"

[connection signal="activate" from="." to="." method="_on_activate"]
[connection signal="timeout" from="Duration_Timer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="Particles_Timer" to="." method="_on_particles_timer_timeout"]
